Solved bug affecting chart generation in windows os